tests/aster/x/mochi/24-game.error
error[A001]: var digits missing expression
  --> /workspace/mochi/tests/rosetta/x/Mochi/24-game.mochi:8:3

  8 |   var digits = []
    |   ^

help:
  Declare digits with a value
